--- a/src/pages/homepage/css/responsive-leyouts.css
+++ b/src/pages/homepage/css/responsive-leyouts.css
@@ -554,7 +554,7 @@ ul.post_meta_links_small {
 
 #trueHeader #logo{
 	text-align: center;
-	background:url(../images/logo.png) no-repeat center bottom;
+	background:url(../images/logo.svg) no-repeat center bottom;
 }
 
 /*#trueHeader .logo { width: 100%; float:none; display: none; }
@@ -1177,7 +1177,7 @@ ul.adsbanner-list {
 
 #trueHeader #logo{
 	text-align: center;
-	background:url(../images/logo.png) no-repeat center bottom;
+	background:url(../images/logo.svg) no-repeat center bottom;
 }
 
 #trueHeader .logo {
