--- a/src/pages/homepage/css/animate.css
+++ b/src/pages/homepage/css/animate.css
@@ -4,7 +4,7 @@
 Animate.css - http://daneden.me/animate
 Licensed under the MIT license - http://opensource.org/licenses/MIT
 
-Copyright (c) 2014 Daniel Eden
+ (c) 2014 Daniel Eden
 */
 
 @-webkit-keyframes shadow
