--- a/src/pages/homepage/css/responsive-leyouts.css
+++ b/src/pages/homepage/css/responsive-leyouts.css
@@ -774,7 +774,7 @@ ul.footer_social_links {
 	float: left;
 	margin-top: 20px;
 }
-.copyright_info .one_half {
+._info .one_half {
 	margin-bottom: 0px;
 }
 
@@ -1450,7 +1450,7 @@ ul.footer_social_links {
 	float: left;
 	margin-top: 20px;
 }
-.copyright_info .one_half {
+._info .one_half {
 	margin-bottom: 0px;
 }
 
