--- a/src/pages/homepage-binance/styles.scoped.css
+++ b/src/pages/homepage-binance/styles.scoped.css
@@ -3903,7 +3903,7 @@ td.rc-table-cell-fix-right::after {
   margin: 0;
   min-width: 0;
   width: 190px;
-  
+  border-color: #e8e8e8;
   border-style: solid;
   border-width: 2px;
   border-radius: 10px;
@@ -4934,11 +4934,7 @@ td.rc-table-cell-fix-right::after {
   }
 }
 
-@media screen and (min-width: 767px) {
-  .css-14p7txk {
-    min-width: 200px;
-  }
-}
+
 
 .css-4qtnb6 {
   box-sizing: border-box;
